@@ -4,5 +4,9 @@
         <item>Light</item>
         <item>Dark</item>
     </string-array>
+    <string-array name="tspin_value">
+        <item>3-corner T</item>
+        <item>Immobile</item>
+    </string-array>
 
 </resources>
